fixes the issue that was preventing the startup